<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/sorting_by"
        android:icon="@drawable/ic_sort_variant"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_name"
                android:orderInCategory="100"
                android:title="@string/by_name" />

            <item
                android:id="@+id/sort_tracks"
                android:orderInCategory="100"
                android:title="@string/by_tracks"/>

            <item
                android:id="@+id/sort_albums"
                android:orderInCategory="100"
                android:title="@string/by_albums"/>
        </menu>
    </item>
    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never">
    </item>
</menu>
